# raycasting-fps

./: Cargo.toml  README.md  nohup.out
assets/: map.jsonc
assets/fonts/: README.md
client/: Cargo.toml
client/src/: main.rs
conf/: map1.json  map1.jsonc  map2.json  map2.jsonc  map_template_rework.jsonc
server/: Cargo.toml
server/src/: gamestate.rs  main.rs  shot.rs  utils.rs
server/src/net/: response.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: camera.rs  frames.rs  lib.rs  main.rs  main.rs_old  n_loader.rs  player.rs  rays.rs
src/client/: args.rs  connection.rs  loading.rs  logic.rs  main.rs  mod.rs  running.rs  screen.rs
src/data/: connection.rs  datatype.rs  deny.rs  entity.rs  host.rs  hosts.rs  input.rs  map.rs  mod.rs  output.rs  player.rs  players.rs  shoot.rs  update.rs
src/display/: display.rs  minimap.rs  mod.rs  texturemanager.rs  textures.rs
src/entities/: barrel.rs  entities.rs  entity.rs  kayou.rs  mod.rs  notmoving.rs  path_follower.rs  pather.rs  player.rs  render_data.rs  straffer.rs  unliving.rs
src/error/: error.rs  mod.rs
src/resources/: manager.rs  mod.rs  resources.rs
src/server/: args.rs  instance.rs  logic.rs  main.rs  mod.rs  players.rs  server.rs
src/server/data/: deny.rs  entity.rs  host.rs  input.rs  mod.rs  on_connection.rs
src/utils/: angles.rs  mod.rs  vecs.rs
src/world/: loader.rs  map.rs  minimap.rs  mod.rs  n_loader.rs  tiles.rs
