[package]
name = "multiplayer_fps"
version = "0.1.0"
edition = "2021"

[lib]
name = "multiplayer_fps"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
gl = "0.14.0"
sdl2 = { version = "0.37.0", features = ["image","ttf"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
