[package]
name = "multiplayer_fps"
version = "0.1.0"
edition = "2021"

[lib]
name = "multiplayer_fps"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.2"
sdl2 = { version = "0.37.0", features = ["image","ttf"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
